# Hexlab

./: README.md  package.json
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx  main.tsx  supportFunctions.ts  types.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmd.rs  config.rs  error.rs  expression.peg  expression.rs  format.rs  gui_func.rs  lib.rs  main.rs  options.rs
src-tauri/src/expression/: expression_test.rs
src/component/: BinaryUI.tsx  BitWidthToggle.tsx  Header.tsx  ResultDisplay.tsx
