[package]
name = "hexlab"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hexlab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1"
clap = { version = "4.5.29", features = ["cargo", "derive"] }
rustyline = "15.0.0"
pest = "2.7.15"
pest_derive = "2.7.15"
home = "0.5.11"
getset = "0.1.4"
anyhow = "1.0.95"
thiserror = "2.0.11"
strum = { version = "0.26.3", features = ["derive"] }
colored = "2.2.0"
once_cell = "1.20.2"
